2006-02-13  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post-release version bump.

=== gnome-vfs 2.13.91 ===
	
2006-02-13  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

	* configure.in:
	Update version to 2.13.91

2006-02-08  JP Rosevear  <jpr@novell.com>
 
 	* modules/sftp-method.c (sftp_connect): handle 'Password:' for
 	newer BSD and MacOSX releases (#322390)
	
2006-02-06  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-xfer.c: (handle_overwrite):
	For now, revert the change: 2006-01-15  Christian Neumair  <chris@gnome-de.org>
	See bug #327984

2006-02-06  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-mime-handlers.c:
	* libgnomevfs/gnome-vfs-mime-info-cache.c:
	Tweak default application handling a bit.
	Now if a mimetype has no default in defaults.list we pick
	any availible handler for that type before going on to the
	parent mimetype. This fixes e.g. the application/rtf case
	where we used to pick gedit (default for text/plain) instead
	of abiword (non-default, but only handler for application/rtf).
	
	* libgnomevfs/gnome-vfs-mime-private.h:
	Remove unused definition.

2006-02-02  Tor Lillqvist  <tml@novell.com>

	* configure.in: Don't use getaddrinfo() on Windows. It's
	implemented only on XP, and we want to support Windows 2000, too.

2006-01-28  David Zeuthen  <davidz@redhat.com>

	* libgnomevfs/gnome-vfs-volume.h (GnomeVFSVolumeOpCallback): 
	Clarify documentation. 

2006-01-24  David Zeuthen  <davidz@redhat.com>

	Eject fixes, based on initial patch from Alexander Larsson. 
	Should fix #328126.

	* libgnomevfs/gnome-vfs-volume-ops.c: 
	(mount_unmount_operation): Handle mount_point being NULL
	(gnome_vfs_volume_eject): Handle eject for TYPE_VFS_MOUNT volumes
	stemming from the hal backend (e.g. burn:// and cdda://)

	* libgnomevfs/gnome-vfs-volume-monitor.c: 
	(_gnome_vfs_volume_monitor_find_volume_by_hal_udi): Also search
	the vfs_volumes as we now put burn:// and cdda:// volumes here